SERVER-16834 bgsync::shutdown() now unblocks threads waiting in BlockingQueue::push()